welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:3: error: not found: value x
		setPos(x,0)
                       ^